--- a/debmirror.conf
+++ b/debmirror.conf
@@ -17,6 +17,7 @@ $debug=0;
 # Download options
 $host="ftp.debian.org";
 $user="anonymous";
+$passwd="anonymous@";
 $remoteroot="/debian";
 $download_method="ftp";
 @dists="sid";
@@ -40,8 +41,8 @@ $check_md5sums=0;
 $ignore_small_errors=0;
 
 # Cleanup
-$cleanup=1;
-$post_cleanup=0;
+$cleanup=0;
+$post_cleanup=1;
 
 # Locking options
 $timeout=300;
@@ -56,6 +57,9 @@ $passive=0;
 
 # Dry run
 $dry_run=0;
+
+# Don't keep pdiff files but use them
+$pdiff_mode="use";
 
 # The config file must return true or perl complains.
 # Always copy this.
