New maintainer, with thanks to Goswin for his work on previous releases
git-svn-id: svn://svn.debian.org/debmirror/trunk@16 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: debmirror
 Section: net
 Priority: extra
-Maintainer: Goswin von Brederlow <brederlo@informatik.uni-tuebingen.de>
+Maintainer: Frans Pop <fjp@debian.org>
 Standards-Version: 3.7.2.0
 
 Package: debmirror
