--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: extra
 Maintainer: Frans Pop <fjp@debian.org>
 Build-Depends: debhelper (>= 7.0.50)
 Standards-Version: 3.8.2
+Vcs-Svn: svn://svn.debian.org/debmirror/trunk/
 
 Package: debmirror
 Architecture: all
