Automatically create and update suite->codename symlinks
git-svn-id: svn://svn.debian.org/debmirror/trunk@58 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debmirror.conf
+++ b/debmirror.conf
@@ -29,6 +29,7 @@ $download_method="ftp";
 # @includes="";
 # @excludes_deb_section="";
 # @limit_priority="";
+$omit_suite_symlinks=0;
 $skippackages=0;
 $getcontents=0;
 $do_source=1;
