Add option to use a cache file to save mirror state between runs
This allows for more efficient mirror runs. See NEWS file and
man page for details.

git-svn-id: svn://svn.debian.org/debmirror/trunk@99 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debmirror.conf
+++ b/debmirror.conf
@@ -35,6 +35,9 @@ $getcontents=0;
 $do_source=1;
 $max_batch=0;
 
+# Save mirror state between runs; value sets validity of cache in days
+$state_cache_days=0;
+
 # Security/Sanity options
 $ignore_release_gpg=0;
 $ignore_release=0;
