Renames in preparation for supporting diff files for Contents files
As the 'diff' option will now apply to both Package/Source files and
Contents files, the term 'pdiff' no longer covers its use.

This also changes the variable to use in the config file.

git-svn-id: svn://svn.debian.org/debmirror/trunk@154 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/examples/debmirror.conf
+++ b/examples/debmirror.conf
@@ -66,8 +66,8 @@ $passive=0;
 # Dry run
 $dry_run=0;
 
-# Don't keep pdiff files but use them
-$pdiff_mode="use";
+# Don't keep diff files but use them
+$diff_mode="use";
 
 # The config file must return true or perl complains.
 # Always copy this.
