Fix and update example configuration file
* Fix error in variable names for setting D-I dists & arches.
* Add example for setting "extra rsync directories".

git-svn-id: svn://svn.debian.org/debmirror/trunk@164 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/examples/debmirror.conf
+++ b/examples/debmirror.conf
@@ -31,13 +31,14 @@ $download_method="ftp";
 # @limit_priority="";
 $omit_suite_symlinks=0;
 $skippackages=0;
+# @rsync_extra="doc,tools";
 $i18n=0;
 $getcontents=0;
 $do_source=1;
 $max_batch=0;
 
-# @di-dist="dists";
-# @di-arch="arches";
+# @di_dist="dists";
+# @di_arch="arches";
 
 # Save mirror state between runs; value sets validity of cache in days
 $state_cache_days=0;
