--- a/examples/debmirror.conf
+++ b/examples/debmirror.conf
@@ -37,8 +37,8 @@ $getcontents=0;
 $do_source=1;
 $max_batch=0;
 
-# @di_dist="dists";
-# @di_arch="arches";
+# @di_dists="dists";
+# @di_archs="arches";
 
 # Save mirror state between runs; value sets validity of cache in days
 $state_cache_days=0;
