Allow to specify the local mirror directory in config files
A mirror directory specified in a config file is overruled by one
passed on the command line.

git-svn-id: svn://svn.debian.org/debmirror/trunk@198 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/examples/debmirror.conf
+++ b/examples/debmirror.conf
@@ -7,7 +7,12 @@
 # The syntax is the same as on the command line and variable names
 # loosely match option names. If you don't recognize something here
 # then just stick to the command line.
+#
+# Options specified on the command line override settings in the config
+# files.
 
+# Location of the local mirror (use with care)
+# $mirrordir="/path/to/mirrordir"
 
 # Output options
 $verbose=0;
