Recommend gpgv; suggest gnupg
As we use 'gpgv' to check the signature on the Release file, gpgv
should be recommended instead of gnupg. But gpg can still be needed
to update the trusted keys file and thus deserves to be suggested.

git-svn-id: svn://svn.debian.org/debmirror/trunk@201 73d8de8a-19be-0310-9dbb-b31ba50de310

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,8 @@ Vcs-Browser: http://svn.debian.org/wsvn/debmirror/trunk/
 Package: debmirror
 Architecture: all
 Depends: ${misc:Depends}, perl (>= 5.10), libnet-perl, libdigest-md5-perl, libdigest-sha1-perl, liblockfile-simple-perl, rsync, libcompress-zlib-perl, bzip2, libwww-perl
-Recommends: gnupg, patch, ed
+Recommends: gpgv, patch, ed
+Suggests: gnupg
 Description: Debian partial mirror script, with ftp and package pool support
  This program downloads and maintains a partial local Debian mirror.
  It can mirror any combination of architectures, distributions and
