--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,10 @@ Vcs-Browser: http://git.debian.org/?p=collab-maint/debmirror.git
 
 Package: debmirror
 Architecture: all
-Depends: ${misc:Depends}, perl (>= 5.10), libnet-perl, libdigest-md5-perl, libdigest-sha-perl, liblockfile-simple-perl, rsync, libcompress-zlib-perl, bzip2, libwww-perl (>= 5.815)
+Depends: ${misc:Depends}, perl (>= 5.10), libnet-perl, libdigest-md5-perl,
+	libdigest-sha-perl, liblockfile-simple-perl, rsync,
+	libcompress-zlib-perl, bzip2, libwww-perl (>= 5.815),
+	libnet-inet6glue-perl
 Recommends: gpgv, patch, ed
 Suggests: gnupg
 Description: Debian partial mirror script, with ftp and package pool support
