--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: debmirror
 Section: net
-Priority: extra
+Priority: optional
 Maintainer: Colin Watson <cjwatson@debian.org>
 Build-Depends: debhelper (>= 7.0.50), perl (>= 5.10), libnet-perl, libdigest-md5-perl, libdigest-sha-perl, liblockfile-simple-perl, libwww-perl (>= 5.815), perl (>= 5.22) | libnet-inet6glue-perl
 Standards-Version: 3.9.8
