--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,8 @@ Priority: optional
 Maintainer: Colin Watson <cjwatson@debian.org>
 Build-Depends: debhelper (>= 7.0.50), perl (>= 5.10), libnet-perl, libdigest-md5-perl, libdigest-sha-perl, liblockfile-simple-perl, libwww-perl (>= 5.815), perl (>= 5.22) | libnet-inet6glue-perl
 Standards-Version: 3.9.8
-Vcs-Git: https://anonscm.debian.org/git/collab-maint/debmirror.git
-Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/debmirror.git
+Vcs-Git: https://salsa.debian.org/debian/debmirror
+Vcs-Browser: https://salsa.debian.org/debian/debmirror
 
 Package: debmirror
 Architecture: all
