Depend on xz-utils (LP: #1614779)
xz is needed for all suites that publish .xz but not uncompressed index
files, or .gz but not .xz without --slow-cpu, so I think that's common
enough to rise above the level of a Recommends.

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,8 @@ Architecture: all
 Depends: ${misc:Depends}, perl (>= 5.10), libnet-perl, libdigest-md5-perl,
 	libdigest-sha-perl, liblockfile-simple-perl, rsync,
 	bzip2, libwww-perl (>= 5.815),
-	perl (>= 5.22) | libnet-inet6glue-perl
+	perl (>= 5.22) | libnet-inet6glue-perl,
+	xz-utils
 Recommends: gpgv, patch, ed
 Suggests: gnupg
 Description: Debian partial mirror script, with ftp and package pool support
