--- a/debian/rules
+++ b/debian/rules
@@ -1,3 +1,11 @@
 #!/usr/bin/make -f
+
+deb_version := $(shell dpkg-parsechangelog | sed -ne "s/^Version: \(.*\)/\1/p")
+
 %:
 	dh $@
+
+override_dh_auto_install:
+	dh_auto_install
+	sed -i 's/^\(our \$$version=\).*/\1"$(deb_version)";/' \
+		debian/debmirror/usr/bin/debmirror
