--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: debmirror
 Section: net
 Priority: optional
 Maintainer: Colin Watson <cjwatson@debian.org>
-Build-Depends: debhelper-compat (= 12), perl, libnet-perl, libdigest-md5-perl, libdigest-sha-perl, liblockfile-simple-perl, libwww-perl, perl | libnet-inet6glue-perl
+Build-Depends: debhelper-compat (= 12), libnet-perl, libdigest-md5-perl, libdigest-sha-perl, liblockfile-simple-perl, libwww-perl
 Standards-Version: 3.9.8
 Vcs-Git: https://salsa.debian.org/debian/debmirror.git
 Vcs-Browser: https://salsa.debian.org/debian/debmirror
@@ -12,7 +12,6 @@ Architecture: all
 Depends: ${misc:Depends}, perl, libnet-perl, libdigest-md5-perl,
 	libdigest-sha-perl, liblockfile-simple-perl, rsync,
 	bzip2, libwww-perl,
-	perl | libnet-inet6glue-perl,
 	xz-utils
 Recommends: gpgv, patch, ed
 Suggests: gnupg
