--- a/debian/rules
+++ b/debian/rules
@@ -5,7 +5,6 @@ include /usr/share/dpkg/pkg-info.mk
 %:
 	dh $@
 
-override_dh_install:
-	dh_install
+execute_after_dh_install:
 	sed -i 's/^\(our \$$version=\).*/\1"$(DEB_VERSION)";/' \
 		debian/debmirror/usr/bin/debmirror
