Add non-free-firmware to the default sections

--- a/examples/debmirror.conf
+++ b/examples/debmirror.conf
@@ -26,7 +26,7 @@ $passwd="anonymous@";
 $remoteroot="debian";
 $download_method="ftp";
 @dists="sid";
-@sections="main,main/debian-installer,contrib,non-free";
+@sections="main,main/debian-installer,contrib,non-free,non-free-firmware";
 @arches="i386";
 # @ignores="";
 # @excludes="";
